# transformer-core

./: README.md  pyproject.toml
src/: embeddings.py  layers.py  transformer_core.py
src/transformer_core/: __init__.py  embeddings.py  layers.py
src/transformer_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/transformer_core/common/: __init__.py  attention.py  feedforward.py  residual.py  rope.py
src/transformer_core/text/: __init__.py  embeddings.py  layers.py
src/transformer_core/vision/: __init__.py  patch_embedding.py  vit.py
src/transformer_core/xai/: __init__.py  attention.py  gradients.py  metrics.py  multimodal.py  results.py
tests/: test_embeddings.py  test_imports.py  test_layers.py  test_rope.py  test_vision.py  test_xai.py  test_xai_metrics.py  test_xai_multimodal.py  test_xai_vlm.py
