[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-core"
version = "0.1.0"
description = "Reusable transformer building blocks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
