[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-core"
version = "0.1.0"
description = "Reusable transformer building blocks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.2"]
authors = [{name = "Sujith"}]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["transformer_core", "embeddings", "layers"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
